# user-crud-api

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/application/repositories/: user_repository.py
src/application/use_cases/: __init__.py  user_use_cases.py
src/domain/: entities.py
src/domain/entities/: user.py
src/infrastructure/api/: routes.py  schemas.py
src/infrastructure/api/schemas/: user_schemas.py
src/infrastructure/repositories/: in_memory_user_repository.py
tests/: test_api.py
